--- a/FestManagemnt/src/main/webapp/WEB-INF/web.xml
+++ b/FestManagemnt/src/main/webapp/WEB-INF/web.xml
@@ -1,12 +1,38 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>FestManagemnt</display-name>
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-  </welcome-file-list>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
+         id="WebApp_ID" version="3.1">
+
+    <display-name>FestManagemnt</display-name>
+    
+    <!-- Define welcome file list -->
+    <welcome-file-list>
+        <welcome-file>index.html</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
+        <welcome-file>index.htm</welcome-file>
+        <welcome-file>default.html</welcome-file>
+        <welcome-file>default.jsp</welcome-file>
+        <welcome-file>default.htm</welcome-file>
+    </welcome-file-list>
+    
+    <!-- Context parameters for database connection -->
+    <context-param>
+        <param-name>DB_URL</param-name>
+        <param-value>jdbc:postgresql://localhost:5432/FestManagement</param-value>
+        <!-- Replace with actual environment variable in deployment -->
+    </context-param>
+    
+    <context-param>
+        <param-name>DB_USER</param-name>
+        <param-value>postgres</param-value>
+        <!-- Replace with actual environment variable in deployment -->
+    </context-param>
+    
+    <context-param>
+        <param-name>DB_PASSWORD</param-name>
+        <param-value>root</param-value>
+        <!-- Replace with actual environment variable in deployment -->
+    </context-param>
+
 </web-app>
